Fix version filter control wrapping and not obeying snapshot filter

--- a/assets/styles/components.scss
+++ b/assets/styles/components.scss
@@ -464,6 +464,15 @@
       background: var(--color-button-bg-hover);
     }
   }
+
+  &.multiselect--disabled {
+    background: none;
+
+    .multiselect__current,
+    .multiselect__select {
+      background: none;
+    }
+  }
 }
 
 label {
